-- The name of the package.
name:                tasty-plus

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.5.2.6

-- A short (one-line) description of the package.
synopsis:            Additional utilities for working with Tasty

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:         -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:     TastyPlus
                     , TastyPlus.Equish

  -- modules included in this library but not exported.
  other-modules:

  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RecordWildCards
                    , PartialTypeSignatures
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeFamilies
                    , UnicodeSyntax
                    , ViewPatterns
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base, base-unicode-symbols, data-textual, deepseq
                     , directory, mtl, optparse-applicative, safe, tasty >= 1.3
                     , tasty-hunit, tasty-quickcheck, temporary, text
                     , text-printer

                     , exited >= 1.0.4.1
                     -- minimize dependencies, including monaderror-io: so
                     -- monaderror-io can use tasty-plus (and modules that use
                     -- tasty-plus) without causing circular dependency
                     -- , monaderror-io >= 1.0.6.0

                     -- LATER NOTE: maybe that's not so bad, the problem was
                     -- monaderror-io trying to use tfmt, which it no longer
                     -- does: now monaderror-io uses only more-unicode, so
                     -- should be pretty safe to use
                     , more-unicode >= 0.0.17.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite tasty-plus-test
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          tasty-plus-test.hs
  build-depends:    base, optparse-applicative, tasty-plus
  default-language: Haskell2010

-------------------------------------------------------------------------------
